--- a/source/_posts/计算机网络.md
+++ b/source/_posts/计算机网络.md
@@ -56,7 +56,7 @@ ISP (Internet service provider) 互联网服务提供商
 吞吐量表示在单位时间内通过某个网络（或信道、接口）的数据量。
 
 {% note primary %}
-由此可知带宽是说的是最大值速率，吞吐量说的是某时刻速率。但吞吐量不能超过最大速率
+由此可知带宽说的是最大值速率，吞吐量说的是某时刻速率。但吞吐量不能超过最大速率
 {% endnote %}
 
 #### 时延
@@ -71,7 +71,7 @@ ISP (Internet service provider) 互联网服务提供商
 {% note primary %}
 总时延 = 排队时延 + 处理时延 + 发送时延 + 传播时延
 {% endnote %}
-  
+
 #### 往返时间（RTT）
 
 在计算机网络中，往返时间也是一个重要的性能指标，它表示从发送方发送数据开始，到发送方收到来自接收方的确认（接受方收到数据后便立即发送确认）总共经历的时间。
@@ -282,82 +282,84 @@ PPP 的帧格式：
 
 分组：大多数计算机网络都不能连续地传送任意长的数据，所以实际上网络系统把数据分割成小块，然后逐块地发动，这种小块就称作分组。
 
-### 相关概念
-
-#### 分组交换
+### 分组交换
 
 当`主机H1`要向另一`主机H2`发送数据（报文）时，首先将数据划分成若干个等长的分组，然后将这些分组一个接一个地发往里与`H1`相联的`路由A`,当`A`接到分组后，先放入缓冲区，再按一定的路由算法确定该分组下一步将发注哪个结点，如此一个结点一个结点传递，直到最终目的`H2`。
 
 这一段话比较啰嗦，简单来说分组就是`分数据块`，同时还具有`无需建立连接`，存储转发（存储转发是指以太网交换机的控制器先将输入端口到来的数据报缓存起来，先检查数据报是否正确，并过滤掉冲突包错误），`动态分配路线`（交换设备会根据网络状况选择不同的路线，比如路由器）的优点。
 
-#### 数据报
+### 数据报
 
 数据报是通过网络传输的`数据的基本单元`，包含一个`报头（header）`和`数据`本身。说白了，就是带地址的数据，比如你的写了一句微信"你好"，这串文字本上加上源地址，目的地址，就是数据报。
 
-#### IP 数据报格式
+### IP 数据报格式
 
-![Alt text](/img/notes/2020-3-27_1_5.png)
+![IP数据报格式](/img/notes/2020-3-27_1_5.png)
 
-- 首部的固定部分是`20字节`，共 `20 * 8 = 160` 比特（1 字节=8 比特）
-- `0 - 4` 比特是版本号，版本有 ipv4/ipv6
-- 首部长度，`单位是 4B`，最小为 5， 为什么是 5 呢？因为首部至少 20 字节，所以 4 \* 5 就是 20 字节
-- 总长度是，`首部+数据`
-- 生存时间是`TTL`，它告诉网络，数据报在网络中的时间是否太长而应被丢弃。每经过一个路由器减一，变成 0 就丢弃
-- 协议是指数据部分用的什么协议，我们只需要知道`TCP`协议用`6`表示，`UDP`协议用`17`表示即可。
-- 首部校验和占`16位`。这个字段只检验数据报的首部，但不包括数据部分。
-- 目的地址和源地址都是`IP地址`，目的地址是通过`DNS`查询得来的。
+- 首部的**固定部分**是`20字节`，共 `20 * 8 = 160` 比特（1 字节=8 比特）。
+- **版本**：占4位，有 4（IPv4）和 6（IPv6）两个值。
+- **首部长度**：`单位是 4B`，最小为 5，因为首部至少 20 字节，所以 4 \* 5 就是 20 字节。
+- **区分服务** ：用来获得更好的服务，一般情况下不使用。
+- **总长度**：首部长度+数据部分长度。
+- **标识**： 在数据报长度过长从而发生分片的情况下，相同数据报的不同分片具有相同的标识符。
+- **片偏移** ：和标识符一起，用于发生分片的情况。片偏移的单位为 8 字节。
+- **生存时间**：`TTL`，它告诉网络，数据报在网络中的时间是否太长而应被丢弃。以路由器跳数为单位，每经过一个路由器减一，变成 0 就丢弃。
+- **协议**：是指数据部分用的什么协议，我们只需要知道`TCP`协议用`6`表示，`UDP`协议用`17`表示即可。
+- **首部校验和**：这个字段只检验数据报的首部，不包括数据部分，因为数据报每经过一个路由器，都要重新计算检验和，因此检验和不包含数据部分可以减少计算的工作量。
+- **目的地址**和**源地址**都是`IP地址`，目的地址是通过`DNS`查询得来的。
 
-#### IP 分片
+### IP 分片
 
-为什么要分片呢：链路层数据帧封装的数据大小是有限制的，以太网的 MTU（MTU 是指一种通信协议的某一层上面所能通过的最大数据报大小）是 1500 字节。
+为什么需要分片：链路层数据帧封装的数据大小是有限制的，以太网的 MTU（MTU 是指一种通信协议的某一层上面所能通过的最大数据报大小）是 1500 字节。
 
-接下来我们就看看在 IP 数据报上，哪些字段标识了分片的数据呢？
+在 IP 数据报上，标识了分片的数据的字段：
 
-![Alt text](/img/notes/2020-3-27_1_7.png)
+![IP数据报格式](/img/notes/2020-3-27_1_7.png)
 
-- 标识是在`同一数据的分片`时相同。
-- 标志占 3 位，但只有两位有意义，第一个位叫`MF(More Fragment)`，MF=1 即表示后面“还有分片”的数据报。MF=0 表示这已是若干数据报片中的最后一个。
-- 标志字段中间的一位记为`DF(Don’t Fragment)`，意思是“不能分片”。只有当 DF=0 时才允许分片。
-- 片偏移，较长的分组在分片后，某片在原分组中的相对位置。
+- **标识**
+- **标志**：占 3 位，但只有两位有意义，第一个位叫`MF(More Fragment)`，MF=1 即表示后面“还有分片”的数据报。MF=0 表示这已是若干数据报片中的最后一个。中间的一位记为`DF(Don’t Fragment)`，意思是“不能分片”。只有当 DF=0 时才允许分片。
+- **片偏移**：较长的分组在分片后，某片在原分组中的相对位置。
 
-#### IP 地址分类
+![数据报的分片举例](/img/notes/2020-3-27_1_34.png)
 
-![Alt text](/img/notes/2020-3-27_1_6.png)
+### IP 地址分类
+
+![IP地址分类](/img/notes/2020-3-27_1_6.png)
 
 其中`127.0.0.0~127.255.255.255`用于环回测试。
 
 有一部分叫`私有IP地址`，是不能拿到网络上跟别的计算机通信的。只能是局域网自己内部用。比如说有：
 
-![Alt text](/img/notes/2020-3-27_1_8.png)
+![私有IP地址](/img/notes/2020-3-27_1_8.png)
 
 可以看到，C 类私有地址就是`192.168`网段，每个局域网都可以有这些私有 IP。
 
 还有一些`特殊地址`，需要了解：
 
-![Alt text](/img/notes/2020-3-27_1_9.png)
+![特殊地址](/img/notes/2020-3-27_1_9.png)
 
 注意，这里的全 1 是指，IPV4 地址由 4 个字节组成，每一个字节是 8 位，8 位全一就是十进制的 255, 即`255.255.255.255`。
 
 - 第一行，全一，代表是`255.255.255.255`，在本网络的目的地址写这个的话，就会内网广播。
 - 第二行，网络号特定值，主机号是全 0，比如，`192.169.10.1`，这是 c 类网络，所以网络号是`192.169.10`，主机号是 1，当主机号全 0 时，就是 0，表示`192.169.10.0`这个网段。
-- 第三行，还是`192.169.10.1`这个 c 类地址，主机号都是 1，也就是 8 个 1，代表 255，所以 192.169.10.255 表示本网段的广播地址。
-- 第四行，大家最熟悉不过了，127 作为网络号，主机号非全 0 或 1，比如说`127.0.0.1`代表本机，称为环回地址。
+- 第三行，还是`192.169.10.1`这个 c 类地址，主机号都是 1，也就是 8 个 1，代表 255，所以 `192.169.10.255`表示本网段的广播地址。
+- 第四行，127 作为网络号，主机号非全 0 或 1，比如说`127.0.0.1`代表本机，称为环回地址。
 
-IPV4 中，`0.0.0.0`地址被用于表示一个无效的，未知的或者不可用的目标。在服务器中，`0.0.0.0`指的是本机上的所有 IPV4 地址，如果一个主机有两个 IP 地址，`192.168.1.1`和`10.1.2.1`，并且该主机上的一个服务监听的地址是`0.0.0.0`,那么通过两个 IP 地址都能够访问该服务。
+IPV4 中，`0.0.0.0`地址被用于表示一个无效的，未知的或者不可用的目标。在服务器中，`0.0.0.0`指的是本机上的所有 IPV4 地址，如果一个主机有两个 IP 地址，`192.168.1.1`和`10.1.2.1`，并且该主机上的一个服务监听的地址是`0.0.0.0`，那么通过两个 IP 地址都能够访问该服务。
 
-#### 网络地址转换(NAT)
+### 网络地址转换(NAT)
 
 在 IP 地址分类里面，我们知道私有 IP 地址是不能跟外网交互的，在小公司大多数计算机的地址都是`192.168`网段，都是私有 IP 地址，它是怎么跟外网交互数据的呢，这里就引出来一个知识点叫`网络地址转换NAT`。
 
-![Alt text](/img/notes/2020-3-27_1_10.png)
+![网络地址转换NAT](/img/notes/2020-3-27_1_10.png)
 
 如上图所示，`192.168.0.3`，`192.168.0.4`都是私有网段上的，它们无法跟外网通信，这个时候由于路由器安装了 NAT 软件，就可以将自己的 IP 地址，即路由器的 IP 地址`172.38.1.5`作为内网的代理，去访问外网，外网返回来的数据，经过路由转换，转换成内网的`192.168`网段的私有地址。
 
-#### 子网划分和子网掩码
+### 子网划分和子网掩码
 
 划分子网的方式是从网络的主机号借用若干位作为子网号，主机号也就相应减少了同样的位数。
 
-![Alt text](/img/notes/2020-3-27_1_10.png)
+![子网划分](/img/notes/2020-3-27_1_11.png)
 
 当没有划分子网时，IP 地址是两级结构。划分子网后 IP 地址变成了三级结构。划分子网只是把 IP 地址的主机号这部分进行再划分，而不改变 IP 地址原来的网络号。
 
@@ -365,38 +367,36 @@ IPV4 中，`0.0.0.0`地址被用于表示一个无效的，未知的或者不可
 
 方法是将数据报的目的地址，跟子网的子网掩码相与预算（二进制与预算规则是，1 跟 1 得 1，其它为 0），也就是目的地址`145.13.3.10`跟子网`145.13.3.0`的子网掩码`255.255.255.0`的与预算，得到的结果是`145.13.3.0`，所以发送到的子网就是`145.13.3.0`。
 
-### ARP 协议
+### 地址解析协议ARP
 
 以太网的帧的格式：
 
-![Alt text](/img/notes/2020-3-27_1_2.png)
+![以太网的帧格式](/img/notes/2020-3-27_1_2.png)
 
 上图有一个`源地址`和`目的地址`，这两个地址都是指的`MAC地址`，`MAC地址`是什么呢？简单说来就是两台相邻的路由器 A 和 B，A 怎么把数据传给 B 呢，它总要知道 B 的物理地址吧，物理地址就像门牌号一样，我要知道你住在哪里，才能把数据送过去吧？首先你肯定知道自己的`MAC地址`是多少，因为在网卡上有，问题在于，别人的`MAC地址`是多少？`ARP协议`就是来帮你找`MAC地址`的。
 
-#### ARP 协议的过程
+#### ARP协议的过程
 
-![Alt text](/img/notes/2020-3-27_1_12.png)
+![ARP协议的过程](/img/notes/2020-3-27_1_12.png)
 
-- 每台主机都会在自己的`ARP缓冲区`中建立一个`ARP列表`，以表示 `IP地址`和`MAC地址`的映射关系
-- 当源主机需要将一个数据报要发送到目的主机时，会首先检查自己`ARP列表`中是否存在该`IP地址`对应的 `MAC地址`
-- 如果有，就直接将数据报发送到这个`MAC地址`；如果没有，就向本地网段发起一个 `ARP`请求的广播报，查询此目的主机对应的`MAC地址`
-- 此`ARP`请求数据报里包括源主机的`IP地址`、`硬件地址`、以及`目的主机的IP地址`。网络中所有的主机收到这个`ARP请求`后，会检查数据报中的目的`IP`是否和自己的`IP地址`一致
-- 如果不相同就忽略此数据报；如果相同，该主机首先将发送端的`MAC地址`和 `IP地址`添加到自己的`ARP列表`中
-- 如果`ARP表`中已经存在该`IP`的信息，则将其覆盖，然后给源主机发送一个 `ARP响应数据报`，告诉对方自己是它需要查找的`MAC地址`
-- 源主机收到这个`ARP响应数据报`后，将得到的目的主机的`IP地址`和`MAC地址`添加到自己的`ARP列表`中，并利用此信息开始数据的传输
-- 如果源主机一直没有收到`ARP响应数据报`，表示`ARP查询失败`。
+1. 每台主机都会在自己的`ARP缓冲区`中建立一个`ARP列表`，以表示 `IP地址`和`MAC地址`的映射关系
+2. 当源主机需要将一个数据报要发送到目的主机时，会首先检查自己`ARP列表`中是否存在该`IP地址`对应的 `MAC地址`
+3. 如果有，就直接将数据报发送到这个`MAC地址`；如果没有，就向本地网段发起一个 `ARP`请求的广播报，查询此目的主机对应的`MAC地址`
+4. 此`ARP`请求数据报里包括源主机的`IP地址`、`硬件地址`、以及`目的主机的IP地址`。网络中所有的主机收到这个`ARP请求`后，会检查数据报中的目的`IP`是否和自己的`IP地址`一致
+5. 如果不相同就忽略此数据报；如果相同，该主机首先将发送端的`MAC地址`和 `IP地址`添加到自己的`ARP列表`中
+6. 如果`ARP表`中已经存在该`IP`的信息，则将其覆盖，然后给源主机发送一个 `ARP响应数据报`，告诉对方自己是它需要查找的`MAC地址`
+7. 源主机收到这个`ARP响应数据报`后，将得到的目的主机的`IP地址`和`MAC地址`添加到自己的`ARP列表`中，并利用此信息开始数据的传输
+8. 如果源主机一直没有收到`ARP响应数据报`，表示`ARP查询失败`。
 
 ### DHCP 协议
 
-> DHCP（动态主机配置协议）是一个局域网的网络协议。指的是由服务器控制一段 lP 地址范围，客户机登录服务器时就可以自动获得服务器分配的 IP 地址和子网掩码。说白了，当你接入局域网的时候，自动由这个 DHCP 服务器给你分配 IP，windows 用户可能知道网卡配置里面，由自动获取 IP 的功能，如果路由器提供 DHCP 服务，你就会自动获取随机分配的 IP。
-
-路由器里可以开启这个服务。
+DHCP（动态主机配置协议）是一个局域网的网络协议。指的是由服务器控制一段 lP 地址范围，客户机登录服务器时就可以自动获得服务器分配的 IP 地址和子网掩码。当接入局域网的时候，自动由这个 DHCP 服务器分配 IP，windows 用户可能知道网卡配置里面，有自动获取 IP 的功能，如果路由器提供 DHCP 服务，就会自动获取随机分配的 IP。路由器里可以开启这个服务。
 
 大致工作过程：
 
-![Alt text](/img/notes/2020-3-27_1_13.png)
+![DHCP数据发送过程](/img/notes/2020-3-27_1_13.png)
 
-### ICMP 协议
+### 网际控制报文协议ICMP
 
 一个新搭建好的网络，往往需要先进行一个简单的测试，来验证网络是否畅通；但是 IP 协议并不提供可靠传输。如果丢包了，IP 协议并不能通知传输层是否丢包以及丢包的原因。
 
@@ -404,31 +404,30 @@ IPV4 中，`0.0.0.0`地址被用于表示一个无效的，未知的或者不可
 
 #### ICMP 协议主要功能
 
-1、确认 IP 报是否成功到达目标地址
+- 确认 IP 报是否成功到达目标地址
+- 通知在发送过程中 IP 报被丢弃的原因，举一个例子：
 
-2、通知在发送过程中 IP 报被丢弃的原因，举一个例子：
-
-![Alt text](/img/notes/2020-3-27_1_14.png)
+![ICMP应答报文](/img/notes/2020-3-27_1_14.png)
 
 主机 H2 收到主机 H1 的一个`UDP报`，结果 H2 发现这个报里的端口没有被监听，这时候就回复给 H2 一个`ICMP应答报文`，意思是这个`UDP数据报`无法交给应用进程，只能丢弃了。
 
 以下是 4 种常见的 ICMP 差错报告报文：
 
-![Alt text](/img/notes/2020-3-27_1_15.png)
+![ICMP 差错报告报文](/img/notes/2020-3-27_1_15.png)
 
 我们常用的`PING`命令借助`ICMP协议`，探测主机是否能找到目的主机。
 
 ### 网络设备路由器简介
 
-> 路由器是一种具有多个输入端口和多个输出端口的专用计算机，其任务是转发和分组。
+路由器是一种具有多个输入端口和多个输出端口的专用计算机，其任务是转发和分组。
 
 如下图所示，分别有转发和分组功能的说明。
 
-![Alt text](/img/notes/2020-3-27_1_16.png)
+![路由器功能](/img/notes/2020-3-27_1_16.png)
 
 接着，我们看一下路由器输入端口做了哪些事情：
 
-![Alt text](/img/notes/2020-3-27_1_17.png)
+![路由器输入端口](/img/notes/2020-3-27_1_17.png)
 
 - 首先，物理层是傻瓜层，传输`比特流`，我们把物理层的比特流还原成`数据链路层`的`数据帧`，然后把`数据链路层`的`数据报`脱去，成为`网络层数据报`，交给路由器。这时候就要判断一下这个数据报是什么类型的了。
 
@@ -436,7 +435,7 @@ IPV4 中，`0.0.0.0`地址被用于表示一个无效的，未知的或者不可
 
 最后我们看一下路由器输出端口做了哪些事情：
 
-![Alt text](/img/notes/2020-3-27_1_18.png)
+![路由器输出端口](/img/notes/2020-3-27_1_18.png)
 
 从上图可以看到，输出端口是做的输入端口的逆过程，将网络层的数据报转换为链路层的数据帧，最后转为物理层的比特流。
 
@@ -804,7 +803,7 @@ Connection: Upgrade
 
     JS 的解析是由浏览器中的 JS 解析引擎完成的。JS 是单线程运行，也就是说，在同一个时间内只能做一件事，所有的任务都需要排队，前一个任务结束，后一个任务才能开始。但是又存在某些任务比较耗时，如 IO 读写等，所以需要一种机制可以先执行排在后面的任务，这就是：同步任务(synchronous)和异步任务(asynchronous)。
 
-    ​JS 的执行机制就可以看做是一个主线程加上一个任务队列(task queue)。同步任务就是放在主线程上执行的任务，异步任务是放在任务队列中的任务。所有的同步任务在主线程上执行，形成一个执行栈;异步任务有了运行结果就会在任务队列中放置一个事件；脚本运行时先依次运行执行栈，然后会从任务队列里提取事件，运行任务队列中的任务，这个过程是不断重复的，所以又叫做事件循环(Event loop)。
+    JS 的执行机制就可以看做是一个主线程加上一个任务队列(task queue)。同步任务就是放在主线程上执行的任务，异步任务是放在任务队列中的任务。所有的同步任务在主线程上执行，形成一个执行栈;异步任务有了运行结果就会在任务队列中放置一个事件；脚本运行时先依次运行执行栈，然后会从任务队列里提取事件，运行任务队列中的任务，这个过程是不断重复的，所以又叫做事件循环(Event loop)。
 
 9. 连接结束
     ​
